force-app/main/default/objects/Case/fields/ARTL_DisconnectionReason__c.field-meta.xml
<CustomField>
    <fullName>ARTL_DisconnectionReason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>DisconnectionReason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>