force-app/main/default/objects/Case/fields/ARTL_EffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>ARTL_EffectiveDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>EffectiveDate</label>
    <length>18</length>
    <type>Text</type>
</CustomField>