force-app/main/default/objects/Case/fields/ARTL_JSONRequest__c.field-meta.xml
<CustomField>
    <fullName>ARTL_JSONRequest__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>JSONRequest</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>