force-app/main/default/objects/Case/fields/ARTL_LSI__c.field-meta.xml
<CustomField>
    <fullName>ARTL_LSI__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>LSI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>