force-app/main/default/objects/Case/fields/ARTL_PTC__c.field-meta.xml
<CustomField>
    <fullName>ARTL_PTC__c</fullName>
    <label>PTC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>