force-app/main/default/objects/Case/fields/ARTL_SRNum__c.field-meta.xml
<CustomField>
    <fullName>ARTL_SRNum__c</fullName>
    <label>SRNum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>