force-app/main/default/objects/Case/fields/vlocity_cmt__Reason__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__Reason__c</fullName>
    <description>The reason why the case was created, such as Instructions not clear, or User didn’t attend training. This field should be used instead of the Case Reason field if you want the available reasons to be dependent on the chosen Case Type.</description>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Problem with change of ownership</fullName>
            </value>
            <value>
                <fullName>Problem with change of customer information</fullName>
            </value>
            <value>
                <fullName>Problem with managing users</fullName>
            </value>
            <value>
                <fullName>Problem with impairment accessibility</fullName>
            </value>
            <value>
                <fullName>Problem with change of plan</fullName>
            </value>
            <value>
                <fullName>Problem with change of mobile phone</fullName>
            </value>
            <value>
                <fullName>Problem with change of SIM</fullName>
            </value>
            <value>
                <fullName>Problem with friends and family number configuration</fullName>
            </value>
            <value>
                <fullName>Problem with SIM unlock</fullName>
            </value>
            <value>
                <fullName>Problem with service restoration</fullName>
            </value>
            <value>
                <fullName>Problem with change of MSISDN</fullName>
            </value>
            <value>
                <fullName>Problem creating account</fullName>
            </value>
            <value>
                <fullName>Problem with IMEI</fullName>
            </value>
            <value>
                <fullName>Problem with termination</fullName>
            </value>
            <value>
                <fullName>Problem with change to retention plan</fullName>
            </value>
            <value>
                <fullName>Problem with port-out</fullName>
            </value>
            <value>
                <fullName>Problem with suspensions</fullName>
            </value>
            <value>
                <fullName>Problem with voluntary suspension</fullName>
            </value>
            <value>
                <fullName>Unacknowledged termination</fullName>
            </value>
            <value>
                <fullName>Problem with delivery</fullName>
            </value>
            <value>
                <fullName>Problem with port-in</fullName>
            </value>
            <value>
                <fullName>Account info in blacklist removal request</fullName>
            </value>
            <value>
                <fullName>Account requires credit evaluation exception</fullName>
            </value>
            <value>
                <fullName>Adress does not have pre-feasibility</fullName>
            </value>
            <value>
                <fullName>Problem with credit card</fullName>
            </value>
            <value>
                <fullName>Problem with top-up creation</fullName>
            </value>
            <value>
                <fullName>Problem with add-on creation</fullName>
            </value>
            <value>
                <fullName>Unacknowledged purchase</fullName>
            </value>
            <value>
                <fullName>Unacknowledged change of plan</fullName>
            </value>
            <value>
                <fullName>Request change plan terms and conditions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>