force-app/main/default/objects/Case/fields/vlocity_cmt__ServiceAccountId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__ServiceAccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the account (e.g., a location or a subscriber) that is the user of the service relevant to this case.</description>
    <label>Service Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Service Cases</relationshipLabel>
    <relationshipName>ServiceCases</relationshipName>
    <type>Lookup</type>
</CustomField>