force-app/main/default/objects/Case/fields/vlocity_cmt__Severity__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__Severity__c</fullName>
    <defaultValue>&quot;Major&quot;</defaultValue>
    <label>Severity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Critical</fullName>
            </value>
            <value>
                <fullName>Major</fullName>
                <default>true</default>
                <label>Major</label>
            </value>
            <value>
                <fullName>Minor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>