force-app/main/default/objects/Case/fields/vlocity_cmt__StatementId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__StatementId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Statement</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.AccountId</field>
            <operation>equals</operation>
            <valueField>vlocity_cmt__Statement__c.vlocity_cmt__AccountId__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>vlocity_cmt__Statement__c</referenceTo>
    <relationshipLabel>Disputes</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>