force-app/main/default/objects/Case/fields/vlocity_cmt__SubscriptionId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__SubscriptionId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Subscription which is the subject of this Case.</description>
    <label>Subscription</label>
    <referenceTo>vlocity_cmt__Subscription__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>